# theuerkauf_fitter

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  test.cpp
theuerkauf/: CMakeLists.txt  TheuerkaufPeak.cpp  TheuerkaufPeak.h  TheuerkaufPeak.hpp  Util.hpp  tabulate.hpp
